# metaflow-sentry-logger

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: release.yaml  tests.yaml
examples/: sample_flow.py  sample_flow_with.py
metaflow_extensions/sentry/config/: metaflow_config.py
metaflow_extensions/sentry/plugins/: mfextinit_sentry.py  sentry_logging_step_decorator.py
metaflow_extensions/sentry/toplevel/: mfextinit_sentry.py  sentry_toplevel.py
tests/: conftest.py  test_sentry_logger.py
